31-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myredis
  namespace: yatest
spec:
  replicas: 1
  selector:
     matchLabels:
       app: myredis
  template:
    metadata:
      labels:
        app: myredis
    spec:
      terminationGracePeriodSeconds: 30
      hostname: myredis01
      containers:
      - name: myredis
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: myredis
  namespace: yatest
spec:
  selector:
    app: myredis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
