45-site-spelet.yaml
# kubectl --kubeconfig=./Downloads/stefansnya-kubeconfig.yaml --namespace=yatest create secret docker-registry regcred    --docker-server=git.systementor.se    --docker-username=yacloud    --docker-password=yacloud1    --docker-email=yacloud@systementor.se

# git.systementor.se/yacloud/cloudstartapi

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spelet
  namespace: yatest
  labels:
    app: spelet
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spelet
  template:
    metadata:
      labels:
        app: spelet
    spec:
      containers:
        - name: spelet
          image: git.systementor.se/yacloud/reactdemo
          ports:
            - containerPort: 3000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: spelet-service
  labels:
    app: spelet
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: spelet
  sessionAffinity: None
